# Qt-Playground-Cmake-Clion

./: .gitignore  CMakeLists.txt
